// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTogglerProps for \`on\` false 1`] = `
Object {
  "aria-controls": "target",
  "aria-expanded": false,
  "id": "extra",
  "onClick": [Function],
  "onKeyUp": [Function],
  "tabIndex": 0,
}
`;

exports[`getTogglerProps for \`on\` true 1`] = `
Object {
  "aria-controls": "target",
  "aria-expanded": true,
  "id": "extra",
  "onClick": [Function],
  "onKeyUp": [Function],
  "tabIndex": 0,
}
`;
